--- a/src/worlds/TelescopeView/index.html
+++ b/src/worlds/TelescopeView/index.html
@@ -24,12 +24,17 @@
         <img id='outside_portal_png' src='assets/textures/outside_portal.png' crossorigin="anonymous">
 
         <!-- credit: "magic" music - https://soundcloud.com/royaltyfreebackgroundmusic/sets/creative-commons-music-365 -->
-        <audio id="magic_music" src="assets/sounds/Magic_Music.mp3" preload="auto" crossorigin="anonymous"></audio>
+        <!-- credit: "BackgroundMusic" music - ... -->
+        <audio id="backgroundMusic" src="assets/sounds/background_audio.mp3" preload="auto" crossorigin="anonymous"></audio>
+        
+        <!-- VoiceOvers -->
+        <audio id="vcFiveDollar" src="assets/sounds/vcFiveDollar.mp3" preload="auto" crossorigin="anonymous"></audio>
+        <audio id="vcHelmet" src="assets/sounds/vcHelmet.mp3" preload="auto" crossorigin="anonymous"></audio>
+        <audio id="vcImaxCamera" src="assets/sounds/vcImaxCamera.mp3" preload="auto" crossorigin="anonymous"></audio>
+        <audio id="vcSatellite" src="assets/sounds/vcSatellite.mp3" preload="auto" crossorigin="anonymous"></audio>
+        <audio id="vcToolbox" src="assets/sounds/vcToolbox.mp3" preload="auto" crossorigin="anonymous"></audio>
+        <audio id="vcJamesWebbTel" src="assets/sounds/vcJamesWebbTel.mp3" preload="auto" crossorigin="anonymous"></audio>
 
-        <audio id="note_c" src="assets/sounds/Note_C.mp3" preload="auto" crossorigin="anonymous"></audio>
-        <audio id="note_d" src="assets/sounds/Note_D.mp3" preload="auto" crossorigin="anonymous"></audio>
-        <audio id="note_e" src="assets/sounds/Note_E.mp3" preload="auto" crossorigin="anonymous"></audio>
-        <audio id="note_f" src="assets/sounds/Note_F.mp3" preload="auto" crossorigin="anonymous"></audio>
 
         <!-- Models -->
         <!-- Credit for textures: https://www.solarsystemscope.com/textures/ -->
