--- a/src/worlds/Orbits/index.html
+++ b/src/worlds/Orbits/index.html
@@ -186,30 +186,36 @@
     <!-- the isOpen part isn't working properly right now -->
     <!-- open-doors="id__1:lobbydoor_L_front; id__2:lobbydoor_R_front; isOpen:isOpen_lobbyFront;" -->
     <a-entity   id="button_1"
-                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.4; click_sound:#notew_f;"
-                position="5.9 2.5 -4" rotation="0 0 90" scale="0.8 0.8 0.8">
+                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.5; click_sound:#notew_f;"
+                position="6.04 2.6 -3.42" rotation="0 -3.3 90" scale="0.8 0.8 0.8"
+                circles-sphere-env-map="src:#skyMap">
     </a-entity>
     <a-entity   id="button_2"
-                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.4;"
-                position="6.07 2.45 -6.65" rotation="0 0 90" scale="0.8 0.8 0.8">
+                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.45;"
+                position="6.04 2.43 -6.65" rotation="0 0 90" scale="0.8 0.8 0.8"
+                circles-sphere-env-map="src:#skyMap">
     </a-entity>
     <!-- Doors between control room and dining hall -->
     <a-entity   id="button_3"
-                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.4;" 
-                position="-5.9 2.5 -4" rotation="0 180 90" scale="0.8 0.8 0.8">
+                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.45;" 
+                position="-6.06 2.82 -6.39" rotation="0 180 90" scale="0.8 0.8 0.8"
+                circles-sphere-env-map="src:#skyMap">
     </a-entity>
     <a-entity   id="button_4"
-                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.4;" 
-                position="-5.9 2.5 -6" rotation="0 180 90" scale="0.8 0.8 0.8">
+                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.45;" 
+                position="-6.06 3.18 -4.03" rotation="0 180 90" scale="0.8 0.8 0.8"
+                circles-sphere-env-map="src:#skyMap">
     </a-entity>
     <!-- Doors between dining hall and departure bay-->
     <a-entity   id="button_5"
-                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.4;" 
-                position="-5.9 2.5 4" rotation="0 180 90" scale="0.8 0.8 0.8">
+                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.45;" 
+                position="-6.06 3.13 3.97" rotation="0 180 90" scale="0.8 0.8 0.8"
+                circles-sphere-env-map="src:#skyMap">
     </a-entity>
     <a-entity   id="button_6"
-                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.4;" 
-                position="-5.9 2.5 6" rotation="0 180 90" scale="0.8 0.8 0.8">
+                circles-button="button_color:rgb(153, 223, 255); button_color_hover:rgb(63, 134, 166); diameter:0.45;" 
+                position="-6.06 2.2 5.91" rotation="0 180 90" scale="0.8 0.8 0.8"
+                circles-sphere-env-map="src:#skyMap">
     </a-entity>
 
     <!-- <a-entity id="universal_button">
