changed outside photo

--- a/src/worlds/TelescopeView/index.html
+++ b/src/worlds/TelescopeView/index.html
@@ -21,7 +21,7 @@
         <img id='skyMap' src='assets/textures/earth_lowres.jpg' crossorigin="anonymous">
         <img id='earth_jpg' src='assets/textures/earth_cropped.jpg' crossorigin="anonymous">
         <img id='earth_lowres' src='assets/textures/earth_lowres.jpg' crossorigin="anonymous">
-        <img id='outside_portal_png' src='assets/textures/outside_portal.png' crossorigin="anonymous">
+        <img id='outside_jpg' src='assets/textures/outside_screenshot.jpg' crossorigin="anonymous">
 
         <!-- credit: '1980' by Arulo - www.mixkit.com -->
         <audio id="lobbyMusic" src="assets/sounds/lobbyMusic.mp3" preload="auto" crossorigin="anonymous"></audio>
@@ -194,7 +194,7 @@
     <a-entity id="viewport" position="0 1 0" rotation="0 0 0" scale="0.6 0.6 0.6" gltf-model="#viewport_gltf"></a-entity>
     
     <!-- Portal -->
-    <a-entity id="portal-outside" position="-2.6 2.3 -0.4" rotation="0 10 0" scale="0.5 0.5 0.5" circles-portal="img_src:#outside_portal_png; title_text:Return; link_url:/w/Outside"></a-entity>
+    <a-entity id="portal-outside" position="-2.6 2.3 -0.4" rotation="0 10 0" scale="0.5 0.5 0.5" circles-portal="img_src:#outside_jpg; title_text:Return; link_url:/w/Outside"></a-entity>
      
     <!-- Nav mesh -->
     <a-entity id="nav-mesh-telescope" gltf-model="#navmesh_gltf" visible='false' nav-mesh position="0 1 0"></a-entity>
