--- a/src/worlds/Outside/index.html
+++ b/src/worlds/Outside/index.html
@@ -7,8 +7,6 @@
 
     <!-- add your custom scripts here -->
     <!-- <script src="/worlds/hub/scripts/hub.js"></script> -->
-
-    <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
 
@@ -73,7 +71,7 @@
       <circles-manager-avatar/>
 
       <!-- just creating an entity that connects many elements together -->
-      <a-entity id="game_manager" lights-interactive></a-entity>
+      <a-entity id="game_manager"></a-entity>
 
     <!-- Checkpoints -->
     <a-entity id="checkpoint-1" circles-checkpoint position="0 0 0"></a-entity> <!-- start -->
@@ -135,12 +133,12 @@
     <a-entity id="canadarm-description" position="3.2 2.1 -10.3" rotation="-30 -80 0" scale="1 1 1">
       <a-entity geometry="primitive:box; width:5.0; height:2.2; depth:0.2;" material="color:white;" position="0 0 -0.11" circles-sphere-env-map="src:#earth_lowres"></a-entity>
       <a-entity geometry="primitive:box; width:1.5; height:1.5; depth:0.5;" material="color:white;" position="0 -1 -0.69" rotation="35 0 0" circles-sphere-env-map="src:#earth_lowres"></a-entity>
-      <a-entity circles-sound="src:#vcJamesWebbTel; autoplay:false; type:artefact; loop:false; volume:0.6; state:play; poolSize:1;"></a-entity>
+      <a-entity circles-sound="src:#vcJamesWebbTel; autoplay:false; type:artefact; loop:false; volume:0.6; state:stop; poolSize:1;"></a-entity>
       <a-entity text="value:Canadarm; 
                       color:black; font:exo2bold; width:4.8; anchor:left; baseline:top; wrapCount:26;" 
                       position="-2.1 0.94 0" >
                     </a-entity>
-      <a-entity text="value:The Canadarm is Canada’s most famous achievement in the field of robotics. It supported U.S space shuttle missions for 30 years (1981-2011), and was designed to have the dexterity of the human arm but with the strength to unload a space shuttle.;
+      <a-entity text="value:The Canadarm is Canada's most famous achievement in the field of robotics. It supported U.S. space shuttle missions for 30 years (1981-2011) and was designed to have the dexterity of the human arm but with the strength to unload a space shuttle.;
                       color:black; font:roboto; width:4.8; anchor:left; baseline:top; wrapCount:38;" 
                       position="-2.1 0.55 0.02">
                     </a-entity>
